Fixing dark mode class name.

--- a/core/app/modules/import-export/assts/js/pages/import-success/import-success-list/import-success-list.scss
+++ b/core/app/modules/import-export/assts/js/pages/import-success/import-success-list/import-success-list.scss
@@ -5,7 +5,7 @@ $import-success-list-item-dark-border-color: dark-tints(500);
 	--import-success-list-item-border: #{$import-success-list-item-border-color};
 }
 
-.dark {
+.eps-theme-dark {
 	--import-success-list-item-border: #{$import-success-list-item-dark-border-color};
 }
 
