--- a/core/app/modules/import-export/assts/js/shared/footer/footer.scss
+++ b/core/app/modules/import-export/assts/js/shared/footer/footer.scss
@@ -5,7 +5,7 @@ $import-export-footer-dark-border-color: dark-tints(500);
 	--import-export-footer-border-color: #{$import-export-footer-border-color};
 }
 
-.dark {
+.eps-theme-dark {
 	--import-export-footer-border-color: #{$import-export-footer-dark-border-color};
 }
 
